--- a/package.json
+++ b/package.json
@@ -155,6 +155,7 @@
     "winston": "^3.1.0"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.3.3",
     "@bbc/apache2-license-checker": "^1.1.4",
     "@bbc/psammead-storybook-helpers": "^3.1.3",
     "@storybook/addon-knobs": "^5.1.9",
@@ -162,6 +163,8 @@
     "@storybook/theming": "^5.1.9",
     "@testing-library/react": "^8.0.1",
     "@testing-library/react-hooks": "^1.1.0",
+    "@types/jest": "^24.0.15",
+    "@typescript-eslint/parser": "^1.12.0",
     "amphtml-validator": "^1.0.23",
     "audit-ci": "^2.1.0",
     "babel-eslint": "^10.0.2",
@@ -199,6 +202,9 @@
     "stylelint-processor-styled-components": "^1.8.0",
     "supertest": "^4.0.2",
     "swagger-cli": "^2.3.0",
+    "ts-jest": "^24.0.2",
+    "ts-loader": "^6.0.4",
+    "typescript": "^3.5.3",
     "wait-on": "^3.3.0",
     "webpack-bundle-analyzer": "^3.0.3",
     "webpack-dev-server": "^3.7.2",
