--- a/package.json
+++ b/package.json
@@ -164,6 +164,9 @@
     "@testing-library/react": "^8.0.1",
     "@testing-library/react-hooks": "^1.1.0",
     "@types/jest": "^24.0.15",
+    "@types/react": "^16.8.23",
+    "@types/react-loadable": "^5.5.1",
+    "@types/webpack-env": "^1.14.0",
     "@typescript-eslint/parser": "^1.12.0",
     "amphtml-validator": "^1.0.23",
     "audit-ci": "^2.1.0",
