set up linting and fix most issues

--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "lighthouse": "npm run lighthouse:article && npm run lighthouse:frontpage",
     "lighthouse:article": "lighthouse http://localhost.bbc.com:7080/news/articles/c6v11qzyv8po --chrome-flags=\"--no-sandbox --headless --disable-gpu\" --output json --output html --output-path simorgh --config-path scripts/lighthouseConfig.js && node scripts/lighthouseBudget.js run",
     "lighthouse:frontpage": "lighthouse http://localhost.bbc.com:7080/igbo --chrome-flags=\"--no-sandbox --headless --disable-gpu\" --output json --output html --output-path simorgh --config-path scripts/lighthouseConfig.js && node scripts/lighthouseBudget.js run",
-    "test:lint": "eslint --ext .js,jsx,json ./src ./data ./cypress ./.storybook ./webpack** && swagger-cli validate data/schema.yaml",
+    "test:lint": "eslint --ext .js,jsx,json,ts,tsx ./src ./data ./cypress ./.storybook ./webpack** && swagger-cli validate data/schema.yaml",
     "test:lint:css": "stylelint 'src/**/*.js' 'src/**/*.jsx'",
     "test:puppeteer": "jest --env=jsdom --colors ./puppeteer",
     "test:size": "./scripts/bundleSize.sh",
@@ -167,7 +167,9 @@
     "@types/react": "^16.8.23",
     "@types/react-loadable": "^5.5.1",
     "@types/webpack-env": "^1.14.0",
+    "@typescript-eslint/eslint-plugin": "^1.12.0",
     "@typescript-eslint/parser": "^1.12.0",
+    "@typescript-eslint/typescript-estree": "^1.12.0",
     "amphtml-validator": "^1.0.23",
     "audit-ci": "^2.1.0",
     "babel-eslint": "^10.0.2",
